--- a/app/src/main/res/drawable/blue_border_rounded_cornwe.xml
+++ b/app/src/main/res/drawable/blue_border_rounded_cornwe.xml
@@ -4,6 +4,6 @@
     <solid android:color="#FFFFFF" />
     <stroke
         android:width="1.3dp"
-        android:color="#56c596" />
+        android:color="#000000" />
     <corners android:radius="23dp" />
 </shape>
