--- a/app/src/main/res/drawable/ic_outline_filter_alt_24.xml
+++ b/app/src/main/res/drawable/ic_outline_filter_alt_24.xml
@@ -1,5 +1,21 @@
-<vector android:height="48dp" android:tint="#56C596"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M7,6h10l-5.01,6.3L7,6zM4.25,5.61C6.27,8.2 10,13 10,13v6c0,0.55 0.45,1 1,1h2c0.55,0 1,-0.45 1,-1v-6c0,0 3.72,-4.8 5.74,-7.39C20.25,4.95 19.78,4 18.95,4H5.04C4.21,4 3.74,4.95 4.25,5.61z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="65.679"
+    android:viewportHeight="68.0">
+    <path
+        android:fillColor="#000000"
+        android:pathData="M9.63,17.75a8.13,8.13 0,0 0,8.03 -6.96L63.02,10.79a1.16,1.16 0,1 0,0 -2.32L17.66,8.46A8.12,8.12 0,1 0,9.63 17.75ZM9.63,3.82a5.8,5.8 0,1 1,-5.8 5.8A5.81,5.81 0,0 1,9.63 3.82Z"
+        android:strokeWidth="3"
+        android:strokeColor="#000000" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M56.05,50.25a8.13,8.13 0,0 0,-8.03 6.96L2.66,57.21a1.16,1.16 0,1 0,0 2.32L48.02,59.53A8.12,8.12 0,1 0,56.05 50.25ZM56.05,64.18a5.8,5.8 0,1 1,5.8 -5.8A5.81,5.81 0,0 1,56.05 64.18Z"
+        android:strokeWidth="3"
+        android:strokeColor="#000000" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M63.02,32.84L41.39,32.84a8.36,8.36 0,0 0,-16.62 0L2.66,32.84a1.16,1.16 0,1 0,0 2.32h22.18a8.35,8.35 0,0 0,16.48 0h21.7a1.16,1.16 0,1 0,0 -2.32ZM33.08,39.81a6.04,6.04 0,1 1,6.04 -6.04A6.05,6.05 0,0 1,33.08 39.81Z"
+        android:strokeWidth="3"
+        android:strokeColor="#000000" />
 </vector>
