--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/background"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <ImageButton
@@ -22,15 +22,14 @@
             android:background="@drawable/ic_outline_keyboard_backspace_24" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="Sản phẩm"
-            android:textColor="@color/white"
-            android:textSize="27sp"
-            android:textStyle="bold" />
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:layout_weight="1" />
 
         <ImageButton
             android:id="@+id/btn_Datlai"
@@ -322,7 +321,7 @@
                     android:background="@drawable/button_background"
                     android:text="Lưu"
                     android:textColor="@color/white"
-                    android:textSize="19sp"
+                    android:textSize="17sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
