--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/background"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <TextView
@@ -20,8 +20,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="Trang chủ"
-            android:textColor="@color/white"
-            android:textSize="27sp"
+            android:textColor="@color/black"
+            android:textSize="17sp"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -92,7 +92,7 @@
                     android:gravity="center"
                     android:text="Danh sách
                     sản phẩm"
-                    android:textSize="19sp"
+                    android:textSize="17sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -124,7 +124,7 @@
                     android:gravity="center"
                     android:text="Danh sách
                     hóa đơn"
-                    android:textSize="19sp"
+                    android:textSize="17sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -164,7 +164,7 @@
                     android:gravity="center"
                     android:text="Danh sách
                     bài viết"
-                    android:textSize="19sp"
+                    android:textSize="17sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -196,7 +196,7 @@
                     android:gravity="center"
                     android:text="Danh sách
                     khách hàng"
-                    android:textSize="19sp"
+                    android:textSize="17sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -236,7 +236,7 @@
                     android:gravity="center"
                     android:text="Báo cáo
                     thống kê"
-                    android:textSize="19sp"
+                    android:textSize="17sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -267,7 +267,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="Cài đặt"
-                    android:textSize="19sp"
+                    android:textSize="17sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
