--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/background"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <ImageButton
@@ -22,15 +22,14 @@
             android:background="@drawable/ic_outline_keyboard_backspace_24" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="Chi tiết sản phẩm"
-            android:textColor="@color/white"
-            android:textSize="21sp"
-            android:textStyle="bold" />
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:layout_weight="1"  />
 
         <ImageButton
             android:id="@+id/btn_Xoa"
@@ -263,7 +262,7 @@
                         android:layout_toRightOf="@+id/icon4"
                         android:background="@android:color/transparent"
                         android:hint="Khuyến mãi"
-                        android:inputType="text"
+                        android:inputType="number"
                         android:paddingLeft="17dp"
                         android:paddingTop="15dp"
                         android:paddingBottom="15dp"
@@ -322,7 +321,7 @@
                     android:background="@drawable/button_background"
                     android:text="Cập nhật"
                     android:textColor="@color/white"
-                    android:textSize="19sp"
+                    android:textSize="17sp"
                     android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
