--- a/app/src/main/res/layout/activity_detail_receipt.xml
+++ b/app/src/main/res/layout/activity_detail_receipt.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/background"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <ImageButton
@@ -22,20 +22,24 @@
             android:background="@drawable/ic_outline_keyboard_backspace_24" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="Chi tiết đơn hàng"
-            android:textColor="@color/white"
-            android:textSize="21sp"
-            android:textStyle="bold" />
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:layout_weight="1" />
 
         <View
             android:layout_width="35dp"
             android:layout_height="35dp" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="#f1f1f1"/>
 
     <ScrollView
         android:layout_width="match_parent"
