--- a/app/src/main/res/layout/activity_list_customer.xml
+++ b/app/src/main/res/layout/activity_list_customer.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ListProductActivity">
+    tools:context=".ListCustomerActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/btn_BackHome"
+            android:id="@+id/btn_BackCustomer"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_gravity="center"
@@ -25,7 +25,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Danh sách sản phẩm"
+            android:text="Danh sách khách hàng"
             android:textColor="@color/black"
             android:textSize="17sp"
             android:textStyle="bold" />
@@ -36,7 +36,7 @@
             android:layout_height="35dp"
             android:layout_gravity="center"
             android:layout_marginRight="10dp"
-            android:background="@drawable/ic_outline_add_24" />
+            android:background="@color/white" />
     </LinearLayout>
 
     <LinearLayout
@@ -46,19 +46,12 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/filter"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/ic_outline_filter_alt_24" />
-
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:background="@drawable/search_bg"
             android:drawableRight="@drawable/ic_outline_search_24"
-            android:hint="Tìm kiếm sản phẩm"
+            android:hint="Tìm kiếm khách hàng"
             android:inputType="text"
             android:padding="10dp"
             android:textColor="@color/black"
@@ -69,17 +62,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_height="400dp"
+        android:layout_weight="1">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_ListProduct"
+            android:id="@+id/list_customer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp" />
 
     </LinearLayout>
+
 </LinearLayout>
