--- a/app/src/main/res/layout/activity_list_receipt.xml
+++ b/app/src/main/res/layout/activity_list_receipt.xml
@@ -10,11 +10,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/background"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/btn_BackHome"
+            android:id="@+id/btn_BackReceipt"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_gravity="center"
@@ -23,21 +23,20 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
+            android:layout_height="match_parent"
             android:text="Danh sách hóa đơn"
-            android:textColor="@color/white"
-            android:textSize="27sp"/>
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:layout_weight="1"/>
 
         <ImageButton
-            android:id="@+id/btn_AddProduct"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_gravity="center"
             android:layout_marginRight="10dp"
-            android:background="@color/background" />
+            android:background="@color/white" />
     </LinearLayout>
 
     <LinearLayout
