--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".DetailProductActivity">
+    tools:context=".List_Product.DetailProductActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
