--- a/app/src/main/res/layout/activity_list_receipt.xml
+++ b/app/src/main/res/layout/activity_list_receipt.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ListReceiptActivity">
+    tools:context=".List_Receipt.ListReceiptActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
