Them danh sach khach hang

--- a/app/src/main/res/layout/activity_list_receipt.xml
+++ b/app/src/main/res/layout/activity_list_receipt.xml
@@ -13,7 +13,7 @@
         android:background="@color/white"
         android:orientation="horizontal">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btn_BackReceipt"
             android:layout_width="35dp"
             android:layout_height="35dp"
