--- a/app/src/main/res/layout/custom_customer.xml
+++ b/app/src/main/res/layout/custom_customer.xml
@@ -60,7 +60,7 @@
                 android:textSize="17sp" />
 
             <TextView
-                android:id="@+id/txt_SĐTKH"
+                android:id="@+id/txt_SDTKH"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="0838532354"
