--- a/app/src/main/res/layout/activity_detail_customer.xml
+++ b/app/src/main/res/layout/activity_detail_customer.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailCustomerActivity">
+    tools:context=".ListDetailCustomer.DetailCustomerActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
