--- a/app/src/main/res/layout/activity_list_customer.xml
+++ b/app/src/main/res/layout/activity_list_customer.xml
@@ -12,7 +12,7 @@
         android:background="@color/white"
         android:orientation="horizontal">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btn_BackCustomer"
             android:layout_width="35dp"
             android:layout_height="35dp"
