--- a/app/src/main/res/layout/activity_list_customer.xml
+++ b/app/src/main/res/layout/activity_list_customer.xml
@@ -48,15 +48,15 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/search_bg"
+            android:layout_height="37dp"
+            android:background="@drawable/bg_textfield"
             android:drawableRight="@drawable/ic_outline_search_24"
-            android:hint="Tìm kiếm khách hàng"
+            android:hint="Tìm kiếm khách hàng ..."
             android:inputType="text"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textColorHint="#7e7e7e"
-            android:textSize="12sp" />
+            android:textSize="15sp" />
 
     </LinearLayout>
 
