--- a/app/src/main/res/layout/custom_product.xml
+++ b/app/src/main/res/layout/custom_product.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="15dp"
-    android:orientation="vertical"
-    app:cardCornerRadius="20dp"
-    app:cardElevation="1.5dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -25,8 +21,8 @@
 
             <ImageView
                 android:id="@+id/hinhanh_sanpham"
-                android:layout_width="70dp"
-                android:layout_height="70dp" />
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
 
             <TextView
                 android:id="@+id/tensanpham_sanpham"
@@ -37,7 +33,7 @@
                 android:gravity="center"
                 android:hint="Trà đào đá xay"
                 android:textColor="#56c596"
-                android:textSize="17sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
@@ -57,7 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="S"
-                    android:textSize="17sp"
+                    android:textSize="13sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -65,7 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="M"
-                    android:textSize="17sp"
+                    android:textSize="13sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -73,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="L"
-                    android:textSize="17sp"
+                    android:textSize="13sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -81,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="KM"
-                    android:textSize="17sp"
+                    android:textSize="13sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -106,7 +102,7 @@
                     android:layout_height="wrap_content"
                     android:hint="20000"
                     android:textColor="#56c596"
-                    android:textSize="17sp"
+                    android:textSize="13sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -116,7 +112,7 @@
                     android:layout_marginTop="10dp"
                     android:hint="30000"
                     android:textColor="#56c596"
-                    android:textSize="17sp"
+                    android:textSize="13sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -126,7 +122,7 @@
                     android:layout_marginTop="10dp"
                     android:hint="40000"
                     android:textColor="#56c596"
-                    android:textSize="17sp"
+                    android:textSize="13sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -136,7 +132,7 @@
                     android:layout_marginTop="10dp"
                     android:hint="50"
                     android:textColor="#FF414D"
-                    android:textSize="17sp"
+                    android:textSize="13sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -157,30 +153,39 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="đ"
-                    android:textSize="16sp" />
+                    android:textSize="13sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="đ"
-                    android:textSize="16sp" />
+                    android:textSize="13sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="đ"
-                    android:textSize="16sp" />
+                    android:textSize="13sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="%"
-                    android:textSize="16sp" />
+                    android:textSize="13sp" />
 
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#e2e2e2"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"/>
+</LinearLayout>
