--- a/app/src/main/res/layout/activity_list_product.xml
+++ b/app/src/main/res/layout/activity_list_product.xml
@@ -3,22 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ListProductActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:background="@color/white"
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/btn_BackHome"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
-            android:background="@drawable/ic_outline_keyboard_backspace_24" />
+            android:background="@drawable/back" />
 
         <TextView
             android:layout_width="match_parent"
@@ -27,43 +28,38 @@
             android:gravity="center"
             android:text="Danh sách sản phẩm"
             android:textColor="@color/black"
-            android:textSize="17sp"
+            android:textSize="19sp"
             android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/btn_AddProduct"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
             android:layout_marginRight="10dp"
-            android:background="@drawable/ic_outline_add_24" />
+            android:background="@drawable/add" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/filter"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/ic_outline_filter_alt_24" />
-
         <EditText
+            android:id="@+id/txt_timkiemSP"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/search_bg"
+            android:layout_height="37dp"
+            android:background="@drawable/bg_textfield"
             android:drawableRight="@drawable/ic_outline_search_24"
-            android:hint="Tìm kiếm sản phẩm"
+            android:hint="Tìm kiếm sản phẩm ..."
             android:inputType="text"
             android:padding="10dp"
             android:textColor="@color/black"
-            android:textColorHint="#7e7e7e"
-            android:textSize="12sp" />
+            android:textSize="15sp" />
 
     </LinearLayout>
 
