--- a/app/src/main/res/layout/custom_danhmucsp.xml
+++ b/app/src/main/res/layout/custom_danhmucsp.xml
@@ -7,39 +7,40 @@
     <LinearLayout
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/layout_background"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:background="@color/background"
-            android:orientation="horizontal">
+        <!--        <LinearLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="45dp"-->
+        <!--            android:orientation="horizontal">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Danh mục"
-                android:textColor="@color/white"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-        </LinearLayout>
+        <!--            <TextView-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_gravity="center"-->
+        <!--                android:layout_weight="1"-->
+        <!--                android:gravity="center"-->
+        <!--                android:text="Danh mục"-->
+        <!--                android:textColor="@color/black"-->
+        <!--                android:textSize="19sp"-->
+        <!--                android:textStyle="bold" />-->
+        <!--        </LinearLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <RadioButton
                     android:id="@+id/rb_CapheTra"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="7dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
                     android:text="Cà phê - Trà"
                     android:textSize="17sp" />
 
@@ -47,7 +48,8 @@
                     android:id="@+id/rb_Daxay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="7dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="7dp"
                     android:text="Đá xay"
                     android:textSize="17sp" />
 
@@ -55,7 +57,8 @@
                     android:id="@+id/rb_NuocepSinhto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="7dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="7dp"
                     android:text="Nước ép - Sinh tố"
                     android:textSize="17sp" />
 
@@ -63,8 +66,9 @@
                     android:id="@+id/rb_Banhngot"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="7dp"
-                    android:text="Bánh ngọt"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="7dp"
+                    android:text="Thức ăn"
                     android:textSize="17sp" />
             </RadioGroup>
         </LinearLayout>
@@ -78,13 +82,13 @@
 
             <Button
                 android:id="@+id/btn_XacnhanDM"
-                android:layout_width="150dp"
+                android:layout_width="match_parent"
                 android:layout_height="37dp"
                 android:background="@drawable/button_background"
                 android:text="Xác nhận"
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
