--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -13,7 +13,7 @@
         android:background="@color/white"
         android:orientation="horizontal">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/img_BackDSSP"
             android:layout_width="30dp"
             android:layout_height="30dp"
@@ -31,13 +31,13 @@
             android:textSize="19sp"
             android:textStyle="bold" />
 
-        <ImageButton
-            android:id="@+id/btn_Datlai"
+        <ImageView
+            android:id="@+id/btn_LuuSP"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
             android:layout_marginRight="20dp"
-            android:background="@drawable/reset" />
+            android:background="@drawable/check" />
     </LinearLayout>
 
     <ScrollView
@@ -233,29 +233,13 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/bg_textfield"
                 android:hint="Nhập mô tả sản phẩm ..."
                 android:inputType="textMultiLine"
                 android:paddingLeft="20dp"
                 android:textColor="@color/black"
                 android:textSize="16dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:gravity="center">
-
-                <Button
-                    android:id="@+id/btn_LuuSP"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/button_background"
-                    android:text="Lưu"
-                    android:textColor="@color/white"
-                    android:textSize="17sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
