--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -4,21 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".List_Post.AddPostActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:background="@color/white"
         android:orientation="horizontal">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/img_BackDSBV"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/ic_outline_keyboard_backspace_24" />
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/back" />
 
         <TextView
             android:layout_width="match_parent"
@@ -27,16 +28,15 @@
             android:gravity="center"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:textSize="17sp"
+            android:textSize="19sp"
             android:layout_weight="1"  />
 
-        <ImageButton
-            android:id="@+id/btn_Datlai"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+        <View
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/ic_outline_refresh_24" />
+            android:layout_marginRight="20dp"
+            android:background="@color/white" />
     </LinearLayout>
 
     <LinearLayout
