--- a/app/src/main/res/layout/activity_list_post.xml
+++ b/app/src/main/res/layout/activity_list_post.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/btn_BackReceipt"
+            android:id="@+id/btn_BackDSBV"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
