--- a/app/src/main/res/layout/activity_list_receipt.xml
+++ b/app/src/main/res/layout/activity_list_receipt.xml
@@ -26,7 +26,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Danh sách hóa đơn"
+            android:text="Danh sách đơn hàng"
             android:textColor="@color/black"
             android:textSize="19sp"
             android:textStyle="bold" />
