--- a/app/src/main/res/layout/custom_customer.xml
+++ b/app/src/main/res/layout/custom_customer.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="15dp"
-    android:orientation="vertical"
-    app:cardCornerRadius="20dp"
-    app:cardElevation="1.5dp">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="120dp"
+        android:background="@drawable/bg_subadmin"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -41,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Nguyễn Thị Cẩm Tiên"
                 android:textColor="@color/black"
-                android:textSize="17.5sp"
+                android:textSize="17sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -50,22 +49,22 @@
                 android:layout_height="wrap_content"
                 android:hint="tientien.6899@gmail.com"
                 android:textColor="@color/black"
-                android:textSize="17sp" />
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/txt_DiachiKH"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="67 Bờ Bao Tân Thắng, Sơn Kỳ, Tân Phú, TPHCM"
-                android:textSize="17sp" />
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/txt_SDTKH"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="0838532354"
-                android:textSize="17sp" />
+                android:textSize="15sp" />
 
         </LinearLayout>
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
