--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/white"
+    android:orientation="vertical"
     tools:context=".List_Post.AddPostActivity">
 
     <LinearLayout
@@ -24,19 +24,19 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Bài viết"
+            android:layout_weight="1"
             android:gravity="center"
+            android:text="Bài viết"
             android:textColor="@color/black"
-            android:textStyle="bold"
             android:textSize="19sp"
-            android:layout_weight="1"  />
+            android:textStyle="bold" />
 
-        <View
+        <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
             android:layout_marginRight="20dp"
-            android:background="@color/white" />
+            android:background="@drawable/check" />
     </LinearLayout>
 
     <LinearLayout
