--- a/app/src/main/res/layout/activity_list_customer.xml
+++ b/app/src/main/res/layout/activity_list_customer.xml
@@ -51,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="37dp"
             android:background="@drawable/bg_textfield"
-            android:drawableRight="@drawable/ic_outline_search_24"
+            android:drawableRight="@drawable/search"
             android:hint="Tìm kiếm khách hàng ..."
             android:inputType="text"
             android:padding="10dp"
