--- a/app/src/main/res/layout/activity_list_product.xml
+++ b/app/src/main/res/layout/activity_list_product.xml
@@ -54,7 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="37dp"
             android:background="@drawable/bg_textfield"
-            android:drawableRight="@drawable/ic_outline_search_24"
+            android:drawableRight="@drawable/search"
             android:hint="Tìm kiếm sản phẩm ..."
             android:inputType="text"
             android:padding="10dp"
