--- a/app/src/main/res/layout/activity_list_customer.xml
+++ b/app/src/main/res/layout/activity_list_customer.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ListCustomer.ListCustomerActivity">
@@ -47,17 +48,12 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <EditText
+        <SearchView
+            android:id="@+id/searchViewCustomer"
             android:layout_width="match_parent"
             android:layout_height="37dp"
-            android:background="@drawable/bg_textfield"
-            android:drawableRight="@drawable/ic_outline_search_24"
-            android:hint="Tìm kiếm khách hàng ..."
-            android:inputType="text"
-            android:padding="10dp"
-            android:textColor="@color/black"
-            android:textColorHint="#7e7e7e"
-            android:textSize="15sp" />
+            app:queryHint="Search..."
+            android:layout_margin="5dp"/>
 
     </LinearLayout>
 
