--- a/app/src/main/res/layout/activity_list_product.xml
+++ b/app/src/main/res/layout/activity_list_product.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".List_Product.ListProductActivity">
@@ -49,17 +50,12 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/txt_timkiemSP"
+        <SearchView
+            android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="37dp"
-            android:background="@drawable/bg_textfield"
-            android:drawableRight="@drawable/ic_outline_search_24"
-            android:hint="Tìm kiếm sản phẩm ..."
-            android:inputType="text"
-            android:padding="10dp"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
+            app:queryHint="Search..."
+            android:layout_margin="5dp"/>
 
     </LinearLayout>
 
