--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -114,7 +114,7 @@
                 android:id="@+id/report_dailyreport"
                 android:layout_width="150dp"
                 android:layout_height="85dp"
-                android:background="@drawable/rectangle_1"
+                android:background="@color/white"
                 android:orientation="vertical">
 
                 <ImageView
@@ -122,7 +122,7 @@
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="11dp"
-                    android:background="@drawable/icons8_medium_icons_100" />
+                    android:background="@color/white" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -145,7 +145,7 @@
                 android:id="@+id/report_monthreport"
                 android:layout_width="150dp"
                 android:layout_height="85dp"
-                android:background="@drawable/rectangle_2"
+                android:background="@color/white"
                 android:orientation="vertical">
 
                 <ImageView
@@ -153,7 +153,7 @@
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="11dp"
-                    android:background="@drawable/icons8_medium_icons_100" />
+                    android:background="@color/white" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -181,7 +181,7 @@
                 android:id="@+id/report_quarreport"
                 android:layout_width="150dp"
                 android:layout_height="85dp"
-                android:background="@drawable/rectangle_3"
+                android:background="@color/white"
                 android:orientation="vertical">
 
                 <ImageView
@@ -189,7 +189,7 @@
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="11dp"
-                    android:background="@drawable/icons8_literature_100" />
+                    android:background="@color/white" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -212,7 +212,7 @@
                 android:id="@+id/cv_QLKH"
                 android:layout_width="150dp"
                 android:layout_height="85dp"
-                android:background="@drawable/rectangle_4"
+                android:background="@color/white"
                 android:orientation="vertical">
 
                 <ImageView
@@ -220,7 +220,7 @@
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="11dp"
-                    android:background="@drawable/icons8_crowd_100" />
+                    android:background="@color/white" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -248,7 +248,7 @@
                 android:id="@+id/report_totalDonHang"
                 android:layout_width="150dp"
                 android:layout_height="85dp"
-                android:background="@drawable/rectangle_5"
+                android:background="@color/white"
                 android:orientation="vertical">
 
                 <ImageView
@@ -256,7 +256,7 @@
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="11dp"
-                    android:background="@drawable/icons8_user_folder_100" />
+                    android:background="@color/white" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -279,7 +279,7 @@
                 android:id="@+id/cv_QLDH"
                 android:layout_width="150dp"
                 android:layout_height="85dp"
-                android:background="@drawable/rectangle_6"
+                android:background="@color/white"
                 android:orientation="vertical">
 
                 <ImageView
@@ -287,7 +287,7 @@
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="11dp"
-                    android:background="@drawable/icons8_order_history_100" />
+                    android:background="@color/white" />
 
                 <TextView
                     android:layout_width="match_parent"
